made some progress on the portfolio

--- a/pro5/index.html
+++ b/pro5/index.html
@@ -4,7 +4,11 @@
 </head>
 
 <body>
-	<nav class="nav-bar" id="navbar"></nav>
+	<nav class="nav-bar" id="navbar">
+		<div class="nav-menu"></div>
+		<div class="nav-menu"></div>
+		<div class="nav-menu"></div>
+	</nav>
 	<div class="intro" id="welcome-section">
 
 		<div class="welcome-filler"></div>
@@ -12,8 +16,9 @@
 		<h1>Welcome</h1>
 	</div>
 	<div class="content" id="projects">
-		<div class="project"></div>
-		<div class="project"></div>
+		<a href=#><div class="project-tile"></div></a>
+		<a href=#><div class="project-tile"></div></a>		
+		<a href=#><div class="project-tile"></div></a>
 		
 
 	</div>
