--- a/pro4/index.html
+++ b/pro4/index.html
@@ -6,9 +6,19 @@
 
 <body>
 	<div class="flex-container">
-		<main class="material" id="main-section">
-<h1 class="title">MIT/GNU Scheme</h1>
-<h1 class="chapter">1 Overview</h1>
+		<div class="nav-filler"></div>
+		<div class="nav-bar" id="navbar">
+			<ul>First</ul>
+			<ul>Second</ul>
+			<ul>Third</ul>	
+		</div>
+	</div>
+
+		<main class="material" id="main-doc">
+	<h1 class="title">MIT/GNU Scheme</h1>
+		<section class="main-section">
+			<h1 class="chapter">1 Overview</h1>
+
 
 <p>This manual is a detailed description of the MIT/GNU Scheme runtime system. 
 It is intended to be a reference document for programmers.  It does not
@@ -224,8 +234,10 @@ on the value in any way.</p>
 called with a character, <var>char</var>, and may also be called with a
 character and an output port.</p>
 </dd></dd></dl>
-
+			</section>
+			<section class="main-section">			
 <h1>1.2 Scheme Concepts</h1>
+
 
 
 <h4 class="subsection">1.2.1 Variable Bindings</h4>
@@ -425,7 +437,8 @@ object.  Note that the MIT/GNU Scheme compiler takes advantage of this
 property to share constants, but that these constants are not immutable. 
 Instead, two constants that are <code>equal?</code> may be <code>eq?</code> in
 compiled code.</p>
-
+			</section>
+			<section class="main-section">	
 <h1>1.3 Lexical Conventions</h1>
 <h4 class="subsection">1.3.1 Whitespace</h4>
 <p>Whitespace characters are spaces, newlines, tabs, and page breaks. Whitespace is used to improve the readability of your programs and to separate tokens from each other, when necessary. (A token is an indivisible lexical unit such as an identifier or number.) Whitespace is otherwise insignificant. Whitespace may occur between any two tokens, but not within a token. Whitespace may also occur inside a string, where it is significant.</p>
@@ -449,24 +462,18 @@ compiled code.</p>
 <p>Scheme accepts most of the identifiers that other programming languages allow. MIT/GNU Scheme allows all of the identifiers that standard Scheme does, plus many more.</p>
 <p>MIT/GNU Scheme defines a potential identifier to be a sequence of non-delimiter characters that does not begin with either of the characters `#' or `,'. Any such sequence of characters that is not a syntactically valid number (see Numbers) is considered to be a valid identifier. Note that, although it is legal for `#' and `,' to appear in an identifier (other than in the first character position), it is poor programming practice.</p>
 <p>Here are some examples of identifiers:</p>
-<code> lambda             q
-     list->vector       soup
-     +                  V17a
-     <=?                a34kTMNs
-     the-word-recursion-has-many-meanings</code>
+<code> lambda             q</code><br>
+<code>    list->vector       soup</code><br>
+
+<code>    +                  V17a</code><br>
+
+<code>    <=?                a34kTMNs</code><br>
+
+<code>    the-word-recursion-has-many-meanings</code>
 
 
 
-
+		</section>
 </main>
-		<div class="nav-filler"></div>
-		<div class="nav-bar">
-			<ul>First</ul>
-			<ul>Second</ul>
-			<ul>Third</ul>	
-		</div>
-	</div>
 	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
-
-
