started js challanges

--- a/pro5/index.html
+++ b/pro5/index.html
@@ -19,6 +19,11 @@
 		<a href=#><div class="project-tile"></div></a>
 		<a href=#><div class="project-tile"></div></a>		
 		<a href=#><div class="project-tile"></div></a>
+		<a href=#><div class="project-tile"></div></a>
+		<a href=#><div class="project-tile"></div></a>		
+		<a href=#><div class="project-tile"></div></a>
+
+
 		
 
 	</div>
